--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -510,10 +510,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cc899b59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    alcohol  malic_acid       ash  alcalinity_of_ash  magnesium  \\\n",
+      "0  1.518613   -0.562250  0.232053          -1.169593   1.913905   \n",
+      "1  0.246290   -0.499413 -0.827996          -2.490847   0.018145   \n",
+      "2  0.196879    0.021231  1.109334          -0.268738   0.088358   \n",
+      "3  1.691550   -0.346811  0.487926          -0.809251   0.930918   \n",
+      "4  0.295700    0.227694  1.840403           0.451946   1.281985   \n",
+      "\n",
+      "   total_phenols  flavanoids  nonflavanoid_phenols  proanthocyanins  \\\n",
+      "0       0.808997    1.034819             -0.659563         1.224884   \n",
+      "1       0.568648    0.733629             -0.820719        -0.544721   \n",
+      "2       0.808997    1.215533             -0.498407         2.135968   \n",
+      "3       2.491446    1.466525             -0.981875         1.032155   \n",
+      "4       0.808997    0.663351              0.226796         0.401404   \n",
+      "\n",
+      "   color_intensity       hue  od280/od315_of_diluted_wines   proline  \n",
+      "0         0.251717  0.362177                      1.847920  1.013009  \n",
+      "1        -0.293321  0.406051                      1.113449  0.965242  \n",
+      "2         0.269020  0.318304                      0.788587  1.395148  \n",
+      "3         1.186068 -0.427544                      1.184071  2.334574  \n",
+      "4        -0.319276  0.362177                      0.449601 -0.037874  \n"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the last column)\n",
     "predictors = wine_df.iloc[:, :-1]\n",
@@ -539,7 +566,9 @@
    "id": "403ef0bb",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "Depending on the data and kind of models that are going to be used, it is important to standardize the predictor variables. Data can be on different scales and can have wider ranges, and this can impact the results for a model like KNN where observations are classified based on similarity via distance-based calculations. By standardizing the predictor variables, the contributions made by the predictor variables is more even. \n",
+    "\n",
+    "Source: https://builtin.com/data-science/when-and-why-standardize-your-data"
    ]
   },
   {
@@ -555,7 +584,7 @@
    "id": "fdee5a15",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "We did not elect to standardize our response variable Class because it is not necessary; as a target variable, it is not used in the distance-based calculations. "
    ]
   },
   {
@@ -571,7 +600,9 @@
    "id": "f0676c21",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "random.seed(1)\n",
+    "\n",
+    "Setting a seed is important so that you can reproduce your experiments and get the same results, which makes it easy to also go back and debug if there are issues. "
    ]
   },
   {
