--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "72c101f2",
    "metadata": {},
    "outputs": [],
@@ -626,8 +626,8 @@
     "np.random.seed(123)\n",
     "\n",
     "# split the data into a training and testing set. hint: use train_test_split !\n",
-    "\n",
-    "# Your code here ..."
+    "X_train, X_test, y_train, y_test = train_test_split(predictors_standardized, wine_df['class'], test_size=0.25, random_state=123)\n",
+    "\n"
    ]
   },
   {
