--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0  18.0          8         307.0       130.0    3504          12.0   \n",
+       "1  15.0          8         350.0       165.0    3693          11.5   \n",
+       "2  18.0          8         318.0       150.0    3436          11.0   \n",
+       "3  16.0          8         304.0       150.0    3433          12.0   \n",
+       "4  17.0          8         302.0       140.0    3449          10.5   \n",
+       "\n",
+       "   model_year origin                       name  \n",
+       "0          70    usa  chevrolet chevelle malibu  \n",
+       "1          70    usa          buick skylark 320  \n",
+       "2          70    usa         plymouth satellite  \n",
+       "3          70    usa              amc rebel sst  \n",
+       "4          70    usa                ford torino  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import seaborn as sns\n",
     "\n",
@@ -82,12 +200,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5d79f1cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "392"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Number of rows \n",
+    "\n",
+    "len(mpg_data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5d54397",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# of columns\n",
+    "\n",
+    "mpg_data.shape[1]"
    ]
   },
   {
@@ -100,12 +255,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ac306190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg             float64\n",
+       "cylinders         int64\n",
+       "displacement    float64\n",
+       "horsepower      float64\n",
+       "weight            int64\n",
+       "acceleration    float64\n",
+       "model_year        int64\n",
+       "origin           object\n",
+       "name             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Determine variable types of variables \n",
+    "\n",
+    "mpg_data.dtypes\n"
    ]
   },
   {
@@ -113,7 +290,7 @@
    "id": "6d759089",
    "metadata": {},
    "source": [
-    "Your explanation... \n"
+    "The variable mpg is a numeric variable float64, which means that it can store decimals. "
    ]
   },
   {
@@ -126,12 +303,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9f034a5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>4278</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>73</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>pontiac grand prix</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>4951</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick electra 225 custom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>3086</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick estate wagon (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>4425</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>pontiac catalina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>454.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>4354</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet impala</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "116  16.0          8         400.0       230.0    4278           9.5   \n",
+       "95   12.0          8         455.0       225.0    4951          11.0   \n",
+       "13   14.0          8         455.0       225.0    3086          10.0   \n",
+       "8    14.0          8         455.0       225.0    4425          10.0   \n",
+       "6    14.0          8         454.0       220.0    4354           9.0   \n",
+       "\n",
+       "     model_year origin                      name  \n",
+       "116          73    usa        pontiac grand prix  \n",
+       "95           73    usa  buick electra 225 custom  \n",
+       "13           70    usa   buick estate wagon (sw)  \n",
+       "8            70    usa          pontiac catalina  \n",
+       "6            70    usa          chevrolet impala  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here... "
+    "mpg_data.sort_values(by='horsepower', ascending=False).head(5)\n"
    ]
   },
   {
@@ -144,12 +439,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1b91233e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "mpg_data.shape[1]\n",
+    "\n",
+    "# There are 9 variables in total so there are 8 predictor variables."
    ]
   },
   {
@@ -394,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -408,12 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "497a84dc8fec8cf8d24e7e87b6d954c9a18a327edc66feb9b9ea7e9e72cc5c7e"
-   }
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
