--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -759,12 +759,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here ..."
+    "# Predict on the test data\n",
+    "\n",
+    "y_pred = lm.predict(X_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e465d9f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.185474951339148\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the RMSPE \n",
+    "\n",
+    "lm_rmspe = mean_squared_error (\n",
+    "    y_test,\n",
+    "    y_pred \n",
+    ")**0.5\n",
+    "\n",
+    "print(lm_rmspe)"
    ]
   },
   {
