--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -669,34 +669,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0d4dd301",
+   "execution_count": 38,
+   "id": "39ec1c7e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     acceleration  cylinders  displacement  horsepower  model_year  weight\n",
-      "0            12.0          8         307.0       130.0          70    3504\n",
-      "1            11.5          8         350.0       165.0          70    3693\n",
-      "2            11.0          8         318.0       150.0          70    3436\n",
-      "3            12.0          8         304.0       150.0          70    3433\n",
-      "4            10.5          8         302.0       140.0          70    3449\n",
-      "..            ...        ...           ...         ...         ...     ...\n",
-      "393          15.6          4         140.0        86.0          82    2790\n",
-      "394          24.6          4          97.0        52.0          82    2130\n",
-      "395          11.6          4         135.0        84.0          82    2295\n",
-      "396          18.6          4         120.0        79.0          82    2625\n",
-      "397          19.4          4         119.0        82.0          82    2720\n",
-      "\n",
-      "[392 rows x 6 columns]\n"
+      "LinearRegression()\n"
      ]
     }
    ],
    "source": [
+    "# Grab the numeric predictors \n",
+    "numeric_predictors = mpg_data[feature_names]\n",
     "\n",
-    "lm"
+    "# Create a linear regression model\n",
+    "lm = LinearRegression()\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "lm.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -720,17 +713,6 @@
     }
    ],
    "source": [
-    "# Your code here ...\n",
-    "\n",
-    "numeric_predictors = mpg_data[feature_names]\n",
-    "\n",
-    "# Create a linear regression model\n",
-    "lm = LinearRegression()\n",
-    "\n",
-    "# Fit the model to the training data\n",
-    "lm.fit(X_train, y_train)\n",
-    "\n",
-    "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
     "coefficients_df = pd.DataFrame({\n",
     "    \"predictor\": numeric_predictors.columns,\n",
