Implement boostrapping on mean of petal width, calculate mean and compute CI

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -332,19 +332,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "be4c4011",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of Petal Width: replicate\n",
+      "0       0.059673\n",
+      "1       0.073714\n",
+      "2      -0.132510\n",
+      "3      -0.051775\n",
+      "4      -0.053530\n",
+      "          ...   \n",
+      "9995   -0.014041\n",
+      "9996   -0.066694\n",
+      "9997   -0.064939\n",
+      "9998   -0.057918\n",
+      "9999    0.067571\n",
+      "Name: petal width (cm), Length: 10000, dtype: float64\n",
+      "90% Confidence Interval of Mean Petal Width: (-0.13343115747560247, 0.13514237587137462)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here...\n",
     "\n",
-    "mean_petal_width = 🤷‍♂️\n",
-    "\n",
+    "# Implement boostrapping on the mean of petal width and determine the mean petal width \n",
     "np.random.seed(123)\n",
     "\n",
-    "lower_bound = 🤷‍♂️\n",
-    "upper_bound = 🤷‍♂️\n",
+    "bootstrap_samples = [] \n",
+    "for i in range(10_000): \n",
+    "\tsample = scaled_iris_df.sample(frac = 1, replace = True)\n",
+    "\tsample = sample.assign(replicate = i) \n",
+    "\tbootstrap_samples.append(sample)\n",
+    "\n",
+    "boot10000 = pd.concat(bootstrap_samples)\n",
+    "\n",
+    "mean_petal_width = boot10000.groupby(\"replicate\")[\"petal width (cm)\"].mean()\n",
+    "\n",
+    "# Determine the lower and upper bounds of the confidence interval \n",
+    "lower_bound = np.percentile(mean_petal_width, 5)\n",
+    "upper_bound = np.percentile(mean_petal_width, 95)\n",
     "\n",
     "# Display the result\n",
     "print(f\"Mean of Petal Width: {mean_petal_width}\")\n",
