Answer bootstrapping questions

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "be4c4011",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
    "id": "16a6e104",
    "metadata": {},
    "source": [
-    ">  Your answer..."
+    "We use bootstrapping in this context to help us understand how reliable of a statistic the mean is. "
    ]
   },
   {
@@ -412,7 +412,7 @@
    "id": "e5be82ec",
    "metadata": {},
    "source": [
-    "> Your answer..."
+    "The purpose of calculating the confidence interval from the bootstrap samples is to provide the range of values that we expect our values to fall within given our level of confidence. "
    ]
   },
   {
@@ -430,7 +430,7 @@
    "id": "0a7e6778",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "Based on the variability observed in the boostrapped means, the mean of the Petal Width appears to be stable and reliable estimate as the spread is quite small. "
    ]
   },
   {
